druid: improve jvm opts